<resources>
    <string name="app_name">Connect Home</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">The logo of the Connect Home app</string>
    <string name="header_image">The Connect Home Header</string>
    <string name="splash_image">Splash Image</string>
    <string name="network_name">Network Name</string>
    <string name="password">Password</string>
    <string name="attempts">Attempts Left:</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="appliances">Appliances</string>
    <string name="lights">Lights</string>
    <string name="alarm">Alarm</string>
    <string name="climate_control">Climate Control</string>
    <string name="back">Back</string>
    <string name="kettle">Kettle</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="oven">Oven</string>
    <string name="blinds">Blinds</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set">Set</string>
    <string name="disarm_alarm">Disarm Alarm</string>
    <string name="disarm">Disarm</string>
    <string name="immersion">Immersion</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="heating">Heating</string>
    <string name="kitchen">Kitchen</string>
    <string name="dining_room">Dining Room</string>
    <string name="living_room">Living Room</string>
    <string name="hall">Hall</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="front_door">Front Door</string>
    <string name="back_door">Back Door</string>
    <string name="set_confirmation">Alarm has been activated!</string>
    <string name="ok">Ok</string>
    <string name="disarm_confirmation">Alarm has been disarmed!</string>
    <string name="error_message">An error has occurred!</string>
    <string name="try_again">Please Try Again!</string>
    <string name="goodbye">Goodbye</string>
    <string name="sign_back_in">Sign Back In</string>
    <string name="exit">Exit</string>
</resources>
