<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/header"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/header_image" />

    <Button
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:background="#51caf2"
        android:id="@+id/buttonL"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textSize="10sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:text="@string/lights"
        android:id="@+id/button"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"/>

    <TextView
        android:layout_width="16dp"
        android:layout_height="200dp"
        android:text=""
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:text="@string/appliances"
        android:id="@+id/button1"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView5"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:text="@string/climate_control"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:id="@+id/button3"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"/>

    <TextView
        android:layout_width="16dp"
        android:layout_height="200dp"
        android:text=""
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:text="@string/alarm"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:id="@+id/button2"
        android:layout_below="@+id/textView5"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

</RelativeLayout>