<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AlarmMenu">>

    <Button
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:background="#51caf2"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:id="@+id/buttonB" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/header"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/header_image" />

    <Button
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:background="#51caf2"
        android:id="@+id/buttonL"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:text="@string/set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <EditText
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:textColor="#000000"
        android:background="#51caf2"
        tools:ignore="UnusedAttribute"
        android:textAlignment="center"
        android:hint="@string/password"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:text=""
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/buttonSet"
        android:layout_toStartOf="@+id/buttonSet"
        android:textSize="30sp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/set"
        android:id="@+id/buttonSet"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView5"
        android:layout_below="@+id/buttonSet"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <TextView
        android:text="@string/disarm_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="30sp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText1"
        android:textColor="#000000"
        android:background="#51caf2"
        tools:ignore="UnusedAttribute"
        android:textAlignment="center"
        android:layout_toLeftOf="@+id/textView8"
        android:layout_toStartOf="@+id/textView8"
        android:hint="@string/password"
        android:layout_below="@+id/textView7" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:text=""
        android:id="@+id/textView8"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/buttonDisarm"
        android:layout_toStartOf="@+id/buttonDisarm"
        android:textSize="30sp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/disarm"
        android:background="#376180"
        android:textColor="#FFFFFF"
        android:id="@+id/buttonDisarm"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView9"
        android:layout_below="@+id/buttonDisarm"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/attempts"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11"
        android:textSize="25sp" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:text=""
        android:id="@+id/textView11"
        android:layout_below="@+id/textView9"
        android:layout_toLeftOf="@+id/textView12"
        android:layout_toStartOf="@+id/textView12"
        android:textSize="30sp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="New Text"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView9"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:textSize="25sp" />

</RelativeLayout>