<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DisarmConfirmation">>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="275dp"
        android:id="@+id/imageView"
        android:src="@drawable/splash_image"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="60sp" />

    <TextView
        android:text="@string/disarm_confirmation"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textSize="70sp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="#51caf2"
        android:id="@+id/button"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>