<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CCMenu">

    <Button
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:background="#51caf2"
        android:id="@+id/buttonB"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/header"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/header_image" />

    <Button
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:background="#51caf2"
        android:id="@+id/buttonL"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="70sp" />

    <TextView
        android:text="@string/air_conditioning"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/textView5"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"/>

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView6"
        android:layout_below="@+id/toggleButton2"
        android:layout_centerHorizontal="true"
        android:textSize="70sp" />

    <TextView
        android:text="@string/heating"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"/>

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:checked="false"
        android:layout_below="@+id/textView6"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView4"
        android:layout_below="@+id/toggleButton3"
        android:layout_centerHorizontal="true"
        android:textSize="70sp" />

    <TextView
        android:text="@string/immersion"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/textView1"
        android:textSize="30sp"
        android:layout_below="@+id/textView4"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView2"
        android:layout_below="@+id/textView4"
        android:layout_toLeftOf="@+id/toggleButton"
        android:layout_toStartOf="@+id/toggleButton"
        android:textSize="30sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:checked="false"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView3"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:textSize="12sp" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="Sink"
        android:textOff="Bath"
        android:checked="true"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"/>

</RelativeLayout>