<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/splash_image"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:hint="@string/router_name"
        android:focusable="true"
        android:textColorHighlight="#51caf2"
        android:textColorHint="#FFFFFF"
        android:background="#376180"
        tools:ignore="UnusedAttribute"
        android:textAlignment="center"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText1"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:textColor="#000000"
        android:background="#51caf2"
        tools:ignore="UnusedAttribute"
        android:textAlignment="center"
        android:hint="@string/password" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_below="@+id/editText1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/textView" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="#51caf2"
        android:id="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:background="#376180"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

</RelativeLayout>